<resources>
	<string name="app_name">Minefield</string>
	<string name="news">News</string>
	<string name="codex">Codex</string>
	<string name="forum">Forum</string>
	<string name="cartes">Carte</string>
	<string name="faq">FAQ</string>
	<string name="bourse">Bourse</string>
	<string name="liens">Liens</string>
	<string name="about">A Propos</string>
	<string name="quit">Quitter</string>
	<string name="share">Partager</string>
	<string name="AProposTitre">Minefield App v2.2</string>
	<string name="AProposText">Tout Minefield dans votre poche !\n\n2013\nRéalisé par benju\nPour Minefield.fr\n\nN\'hésitez pas à noter l\'app sur le market !\nPour tout commentaires, vous pouvez passer par le forum ou m\'envoyer un mail.\n\nMinefield est le plus grand serveur minecraft de France.\nMinefield is the largest minecraft server of France.</string>
	<string name="news_title">Nouvelles Stendeliennes</string>
	<string name="codex_title">Codex : Recettes de Minefield</string>
	<string name="carte_title">Cartes</string>
	<string name="faq_title">Foire aux questions : Bases</string>
	<string name="liens_title">Liens utiles</string>
	<string name="bourse_title">Bourse de Minefield</string>
	<string name="forum_title">Forum</string>
	<string name="supportbois"> - Support en bois</string>
	<string name="supportboisdesc">Spécialité : Menuisier\nCe bloc décoratif change de
		forme, selon que vous placiez un bloc en face de lui, sur lui, ou en
		diagonale-bas de lui. </string>
	<string name="supportfer"> - Support en fer</string>
	<string name="supportferdesc">Spécialité : Forgeron\nCe bloc décoratif change de
		forme, selon que vous placiez un bloc en face de lui, sur lui, ou en
		diagonale-bas de lui. </string>
	<string name="obsiepee"> - L\'épée d\'obsidienne</string>
	<string name="obsiepeedesc">Spécialité : L\'armurier\nCette arme inflige plus
		de dommages que le fer, mais moins qu\'une lame en diamant. Sa
		durabilité est également à mi-chemin entre le fer et le diamant.
	</string>
	<string name="obsi_armuredesc">Spécialité : L\'armurier\nCette pièce d\'armure a
		une durabilité et une résistance à mi-chemin entre le fer et le
		diamant.</string>
	<string name="obsi_casque"> - Le casque d\'obsidienne</string>
	<string name="obsi_armure"> - Le plastron d\'obsidienne</string>
	<string name="obsi_jambe"> - Les jambières d\'obsidienne</string>
	<string name="obsi_pied"> - Les bottes d\'obsidienne</string>
	<string name="hacheparfaite"> - La Hache parfaite</string>
	<string name="hacheparfaitedesc">Spécialité : Le Bûcheron\nOu Hache sertie
		d\'émeraudes. Casse les troncs en un coup, et les feuilles ne
		l\'émoussent pas. Les autres matériaux l\'endommagent normalement.
		Durabilité égale à celle de la hache en diamant. Seul le bûcheron peut
		l\'utiliser et la crafter.</string>
	<string name="marteau_diamant"> - Le marteau et burin en diamant</string>
	<string name="marteau_diamantdesc">Spécialité : Le Maçon\nLe marteau et burin n\'est
		utilisable que par les maçons, et permet d\'aplanir les escaliers en
		bois, les escaliers en paille, les escaliers en cobblestone, les
		escaliers en ardoise.</string>
	<string name="marteau_or"> - Le marteau et burin en or</string>
	<string name="marteau_fer"> - Le marteau et burin en fer</string>
	<string name="marteau_pierre"> - Le marteau et burin en pierre</string>
	<string name="marteau_bois"> - Le marteau et burin en bois</string>
	<string name="sceptre_foudre"> - Le Sceptre foudroyant</string>
	<string name="sceptre_foudredesc">Spécialité : Le Mage\nLe sceptre a 100
		utilisations, et lance des éclairs ! Il est utilisable par tout le
		monde, et est inoffensif.</string>
	<string name="sceptre_feu"> - Le Sceptre flamboyant</string>
	<string name="sceptre_feudesc">Spécialité : Le Mage\nLe sceptre a 100
		utilisations, et lance des boules de feu ! Il est utilisable par tout
		le monde et est inoffensif.</string>
	<string name="harpon"> - Le harpon</string>
	<string name="harpondesc">Spécialité : Le Pêcheur\nLe harpon ne peut être
		utilisé que par le pêcheur, et lui permet de récupérer des tentacules
		sur les poulpes.</string>
	<string name="brochette_tentacule"> - La Brochette de tentacules</string>
	<string name="brochette_tentaculedesc">Spécialité : Le Pêcheur et le Tavernier\nCette
		brochette rend la totalité des points de vie.</string>
	<string name="soupe_poisson"> - La Soupe de poisson</string>
	<string name="soupe_poissondesc">Spécialité : Le Pêcheur et Le Tavernier\nCette
		soupe requiert du poisson cuit, et redonne la moitié des points de
		vie.</string>
	<string name="citrine"> - La Citrine</string>
	<string name="pierredesc">Spécialité : Le Joaillier\nCette pierre sert dans
		d\'autres recettes.</string>
	<string name="saphir"> - Le Saphir</string>
	<string name="rubis"> - Le Rubis</string>
	<string name="emeraude"> - L\'Émeraude</string>
	<string name="baton_or"> - Le bâton en or</string>
	<string name="orbatondesc">Spécialité : Le Joaillier\nCe bâton sert dans
		d\'autres recettes.</string>
	<string name="cerclageor"> - Le cerclage en or</string>
	<string name="orcerclagedesc">Spécialité : Le Joaillier\nCe cerclage sert dans
		d\'autres recettes.</string>
	<string name="faux_obsi"> - La binette ou faux en obsidienne</string>
	<string name="outil_obsidesc">Spécialité : L\'Outilleur\nCet outil a la
		durabilité moitié celle du diamant, et est aussi efficace que le
		diamant.</string>
	<string name="hache_obsi"> - La Hache en obsidienne</string>
	<string name="pelle_obsi"> - La Pelle en obsidienne</string>
	<string name="pioche_obsi"> - La Pioche en obsidienne</string>
	<string name="obsi"> - Le Lingot d\'obsidienne</string>
	<string name="obsidesc">Spécialité : Le forgeron\nSert pour différents
		crafts en obsidienne. A faire fondre dans un four.</string>
	<string name="baton_obsi"> - Le bâton en obsidienne</string>
	<string name="cerclage_obsi"> - Le Cerclage en obsidienne</string>
	<string name="eprouvette"> - L\'éprouvette</string>
	<string name="eprouvettedesc">Spécialité : Le Souffleur de verre\nSert pour les
		différentes recettes de potions.</string>
	<string name="fiole_agra_leg"> - La Fiole d\'agrandissement légère</string>
	<string name="fiole_agra_legdesc">Spécialité : L\'Herboriste\nVous rend une fois et
		demie plus grand pendant 5 minutes. Permet de sauter plus haut et
		d\'avoir la classe.</string>
	<string name="fiole_agra_for"> - La Fiole d\'agrandissement forte</string>
	<string name="fiole_agra_fordesc">Spécialité : L\'Herboriste\nVous rend deux fois
		plus grand pendant 5 minutes. Permet de sauter encore plus haut et
		d\'avoir encore plus la classe.</string>
	<string name="fiole_retre_leger"> - La Fiole de rétrécissement légère</string>
	<string name="fiole_retre_legerdesc">Spécialité : L\'Herboriste\nVous rend deux fois
		plus petit pendant 5 minutes. Permet de passer dans des tunnels.
	</string>
	<string name="fiole_retre_fort"> - La Fiole de rétrécissement forte</string>
	<string name="fiole_retre_fortdesc">Spécialité : L\'Herboriste\nVous rend trois fois
		plus petit pendant 5 minutes. Permet de passer dans des tunnels.
	</string>
	<string name="gobeur"> - Le Gobeur de monstre</string>
	<string name="gobeurdesc">Spécialité : L\'indigène à la con du Chaos\nCliquez
		sur un animal pour l\'enfermer à l\'intérieur, sert uniquement pour la
		déco.</string>
	<string name="rideaux"> - Les rideaux</string>
	<string name="rideauxdesc">Spécialité : Le Tisserand\nDisponible dans toutes
		les couleurs. Idéal pour décorer les fenêtres</string>
	<string name="scaphandre_casque"> - Scaphandre - Casque</string>
	<string name="scaphandredesc">Spécialité : Le Pêcheur\nPermet de mieux voir et de
		respirer sous l\'eau</string>
	<string name="scaphandre_corps"> - Scaphandre - Corps</string>
	<string name="scaphandre_jambe"> - Scaphandre - Jambières</string>
	<string name="scaphandre_pied"> - Scaphandre - Bottes</string>
	<string name="escalier_tissu"> - Escalier en laine (ou tissu)</string>
	<string name="escalier_tissudesc">Spécialité : Le Tisserand\nDisponible dans toutes
		les couleurs. Peut servir de canapé !</string>
	<string name="ardoise"> - Le bloc d\'ardoise</string>
	<string name="ardoisedesc">Spécialité : Le Maçon\nPour la déco et les toits
	</string>
	<string name="escalier_ardoise"> - L\'Escalier en ardoises</string>
	<string name="barrefer"> - La barre de fer</string>
	<string name="barreferdesc">Spécialité : Le Forgeron\nSert pour d\'autres
		crafts</string>
	<string name="cerclage_fer"> - Les Cerclages en fer</string>
	<string name="barriere_fer"> - La barrière en fer</string>
	<string name="forgerondesc">Spécialité : Le Forgeron</string>
	<string name="herse"> - La herse</string>
	<string name="couvert"> - Les couverts</string>
	<string name="couvertdesc">Spécialité : Le Joaillier</string>
	<string name="glowpurifie"> - La Glowstone purifié</string>
	<string name="glowdesc">Spécialité : L\'Indigène à la con du Chaos.\nFait
		de la lumière.</string>
	<string name="lanterneglow"> - La Lanterne de glowstone</string>
	<string name="lanterneglowpure"> - La Lanterne de glowstone purifié</string>
	<string name="selle"> - La selle</string>
	<string name="selledesc">Spécialité : L\'Aventurier et le Fermier.\nPermet
		de monter les animaux :)</string>
	<string name="tonneau"> - Le Tonneau</string>
	<string name="menuisier">Spécialité : Le Menuisier</string>
	<string name="chaise"> - La chaise</string>
	<string name="tabouret"> - Le Tabouret</string>
	<string name="bancSans"> - Le Banc (sans pied)</string>
	<string name="bancAvec"> - Le Banc (avec pied)</string>
	<string name="etagere"> - L\'Étagère</string>
	<string name="table_basse"> - La Table basse</string>
	<string name="table_poteau"> - La Table (avec poteau central)</string>
	<string name="table_angle"> - La Table (avec poteau dans l\'angle)</string>
	<string name="table_plateau"> - La Table (plateau uniquement)</string>
	<string name="paille"> - La Paille</string>
	<string name="paille_escalier"> - L\'Escalier en paille</string>
	<string name="escalier_brique"> - L\'Escalier en brique</string>
	<string name="poulie"> - La poulie</string>
	<string name="pouliedesc">Spécialité : L\'Ingénieur\nUne poulie peut tirer
		jusqu\'à 7 chaînes et 10 herses. Si elle est alimentée en redstone, la
		herse se met à monter, autrement, la herse redescend. </string>
	<string name="chaine"> - La chaîne</string>
	<string name="chainedesc">Spécialité : L\'Ingénieur\nFait le lien entre une
		poulie et une herse.</string>
	<string name="vis"> - La vis</string>
	<string name="visdesc">Spécialité : L\'Outilleur et le Forgeron\nSert pour
		la poulie.</string>
	<string name="cape"> - La cape basique de laine</string>
    <string name="capedesc">Spécialité : Le Tisserand\nDisponible en 16 couleurs !</string>
    <string name="marteauobsi"> - Le marteau et burin en obsidienne (ne marche pas IG)</string>
    <string name="pailledesc">La paille est craftable pour tout le monde ! :)</string>
    <string name="pailleescalierdesc">Pour faire vos toits en chaume !\n</string>
	<string name="profil">Profil</string>
</resources>