<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/paperbg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonNews"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/sign"
                android:gravity="center"
                android:text="@string/news"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonForum"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/paper"
                android:text="@string/forum"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonCodex"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/book"
                android:text="@string/codex"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonBourse"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/or"
                android:text="@string/bourse"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonCartes"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/map"
                android:text="@string/cartes"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonFAQ"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/faq"
                android:text="@string/faq"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonProfil"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/profil"
                android:text="@string/profil"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonLiens"
                style="@style/HomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/mybuttonmf"
                android:drawableTop="@drawable/redstone"
                android:text="@string/liens"
                android:textColor="#E6E5C7"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/footer"
        android:gravity="center" >

        <ImageView
            android:id="@+id/facebookicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5px"
            android:src="@drawable/facebookmf" />

        <!-- <TextView
            android:id="@+id/textMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="bottom|right"
            android:paddingRight="10px"
            android:text="@string/textmain"
            android:textColor="#ebebeb" /> -->

        <ImageView
            android:id="@+id/twittericon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/facebookicon"
            android:clickable="true"
            android:padding="5px"
            android:src="@drawable/twittermf" />
    </RelativeLayout>

</LinearLayout>